# episteme

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
config/: example.toml
examples/: problems.jsonl
prompts/: system.md
prompts/examples/: judge-correctness.md
src/: lib.rs  main.rs
src/checkpoint/: mod.rs  state.rs  transaction.rs
src/client/: llm_client.rs  mod.rs  openrouter.rs  rate_limiter.rs  registry.rs
src/models/: config.rs  error.rs  mod.rs  sample.rs
src/pipeline/: dpo.rs  mod.rs  sft.rs
src/pool/: judge.rs  mod.rs  worker.rs
