[package]
name = "episteme"
version = "0.4.0"
edition = "2024"
authors = ["INFERNET <in@infernet.org>"]
description = "Epistemic dataset generation for SFT/DPO training via OpenRouter"
license = "Apache-2.0"
repository = "https://github.com/infernet-org/episteme"
keywords = ["llm", "dpo", "sft", "dataset", "openrouter", "epistemic"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency utilities
dashmap = "6"
async-channel = "2"

# Retry/backoff
backoff = { version = "0.4", features = ["tokio"] }

# Progress bars
indicatif = "0.17"

# Config file parsing
toml = "0.8"

# Regex for parsing
regex = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Glob pattern matching (for transaction recovery)
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
